--- a/src/styles/themeless-ui.css
+++ b/src/styles/themeless-ui.css
@@ -3,8 +3,11 @@
 
 /* Variables */
 @import "spacing.css";
+@import "typography.css";
+@import "colors.css";
 
 /* Components */
 @import "../components/Button/Button.css";
+@import "../components/Heading/Heading.css";
 @import "../components/Paragraph/Paragraph.css";
 @import "../components/Text/Text.css";
