--- a/src/components/Paragraph/Paragraph.css
+++ b/src/components/Paragraph/Paragraph.css
@@ -1,5 +1,16 @@
 .tui__paragraph {
   display: block;
-  margin: 0 0 var(--tui__spacing-8) 0;
+  box-sizing: border-box;
+  margin: var(--tui__spacing-16) 0;
   color: var(--tui__color-black);
+  font-family: var(--tui__font-family-serif);
+  font-size: var(--tui__font-size-medium);
+  -webkit-font-smoothing: var(--tui__font-smoothing-webkit);
+  -moz-osx-font-smoothing: var(--tui__font-smoothing-moz);
+  line-height: var(--tui__line-height-md);
+  overflow-wrap: break-word;
+}
+
+:is(h1, h2, h3, h4, h5, h6) + .tui__paragraph {
+  margin-top: 0;
 }
