feat: add blockquote component

--- a/packages/style/src/index.css
+++ b/packages/style/src/index.css
@@ -7,6 +7,7 @@
 @import "./tokens/colors.css";
 
 /* Components */
+@import "./components/blockquote.css";
 @import "./components/button.css";
 @import "./components/heading.css";
 @import "./components/paragraph.css";
