--- a/packages/style/src/index.css
+++ b/packages/style/src/index.css
@@ -10,5 +10,6 @@
 @import "./components/blockquote.css";
 @import "./components/button.css";
 @import "./components/heading.css";
+@import "./components/list.css";
 @import "./components/paragraph.css";
 @import "./components/text.css";
