feat: add Stack component

--- a/packages/style/src/index.css
+++ b/packages/style/src/index.css
@@ -13,4 +13,5 @@
 @import "./components/heading.css";
 @import "./components/list.css";
 @import "./components/paragraph.css";
+@import "./components/stack.css";
 @import "./components/text.css";
