--- a/packages/style/src/tokens/colors.css
+++ b/packages/style/src/tokens/colors.css
@@ -1,4 +1,16 @@
+/* Palette generated with https://grayscale.design */
 :root {
   --tui__color-black: rgb(0 0 0);
   --tui__color-white: rgb(255 255 255);
+  --tui__color-gray-50: rgb(248 248 248);
+  --tui__color-gray-100: rgb(226 226 226);
+  --tui__color-gray-200: rgb(205 205 205);
+  --tui__color-gray-300: rgb(185 185 185);
+  --tui__color-gray-400: rgb(165 165 165);
+  --tui__color-gray-500: rgb(146 146 146);
+  --tui__color-gray-600: rgb(127 127 127);
+  --tui__color-gray-700: rgb(108 108 108);
+  --tui__color-gray-800: rgb(87 87 87);
+  --tui__color-gray-900: rgb(65 65 65);
+  --tui__color-gray-950: rgb(45 45 45);
 }
