--- a/packages/style/src/components/button.css
+++ b/packages/style/src/components/button.css
@@ -1,3 +1,44 @@
 .tui__button {
-  display: block;
+  display: inline-block;
+  overflow: visible;
+  box-sizing: border-box;
+  padding: var(--tui__spacing-4) var(--tui__spacing-8);
+  border: solid var(--tui__color-black) var(--tui__spacing-1);
+  border-radius: 0;
+  margin: 0;
+  appearance: button;
+  background-color: var(--tui__color-white);
+  color: var(--tui__color-black);
+  font-family: var(--tui__font-family-serif);
+  font-size: var(--tui__font-size-md);
+  -webkit-font-smoothing: var(--tui__font-smoothing-webkit);
+  -moz-osx-font-smoothing: var(--tui__font-smoothing-moz);
+  font-style: normal;
+  font-weight: var(--tui__font-weight-normal);
+  line-height: var(--tui__line-height-md);
+  overflow-wrap: break-word;
+  text-transform: none;
+}
+
+.tui__button:hover {
+  border-color: var(--tui__color-gray-800);
+  background-color: var(--tui__color-gray-100);
+}
+
+.tui__button:focus {
+  border-color: var(--tui__color-gray-800);
+  background-color: var(--tui__color-gray-100);
+  outline: solid var(--tui__color-gray-200) var(--tui__spacing-3);
+  outline-offset: var(--tui__spacing-1);
+}
+
+.tui__button:active {
+  background-color: var(--tui__color-gray-200);
+}
+
+.tui__button:disabled,
+.tui__button:disabled:hover,
+.tui__button:disabled:focus {
+  border-color: var(--tui__color-gray-200);
+  background-color: var(--tui__color-gray-200);
 }
