feat: input component

--- a/packages/style/src/index.css
+++ b/packages/style/src/index.css
@@ -11,6 +11,7 @@
 @import "./components/blockquote.css";
 @import "./components/button.css";
 @import "./components/heading.css";
+@import "./components/input.css";
 @import "./components/list.css";
 @import "./components/paragraph.css";
 @import "./components/stack.css";
