feat: textarea component

--- a/packages/style/src/index.css
+++ b/packages/style/src/index.css
@@ -16,3 +16,4 @@
 @import "./components/paragraph.css";
 @import "./components/stack.css";
 @import "./components/text.css";
+@import "./components/textarea.css";
