--- a/packages/style/src/index.css
+++ b/packages/style/src/index.css
@@ -1,19 +1,3 @@
-/* Default theme */
 @import "../node_modules/@themeless-ui/theme-default/dist/theme-default.css";
-
-/* Tokens */
-@import "./tokens/spacing.css";
-@import "./tokens/typography.css";
-@import "./tokens/colors.css";
-
-/* Components */
-@import "./components/anchor.css";
-@import "./components/blockquote.css";
-@import "./components/button.css";
-@import "./components/heading.css";
-@import "./components/input.css";
-@import "./components/list.css";
-@import "./components/paragraph.css";
-@import "./components/stack.css";
-@import "./components/text.css";
-@import "./components/textarea.css";
+@import "./tokens.css";
+@import "./components.css";
