feat: add Prose component

--- a/packages/style/src/components.css
+++ b/packages/style/src/components.css
@@ -5,6 +5,7 @@
 @import "./components/input.css";
 @import "./components/list.css";
 @import "./components/paragraph.css";
+@import "./components/prose.css";
 @import "./components/stack.css";
 @import "./components/text.css";
 @import "./components/textarea.css";
